# inboundcall-twilio-and-realtime-openai

./: README.md  main.py  pyproject.toml  requirements.txt
