[project]
name = "inboundcall-twilio-and-realtime-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "python-dotenv>=1.0.1",
    "twilio>=9.4.6",
    "uvicorn>=0.34.0",
    "websockets==13.1",
]
